--- a/assets/scss/contact-us.scss
+++ b/assets/scss/contact-us.scss
@@ -1,6 +1,6 @@
 /* Contact Us Css Code */
 .contact--us--sec {
-  padding-top: 133px;
+  padding-top: clamp(33px, 6vw, 133px);
   h2.sec__heading {
     margin: 61px 0 94px;
     font-weight: 800;
@@ -10,6 +10,7 @@
     span {
       font-weight: 500;
       font-size: 25px;
+      font-size: clamp(16px, 5vw, 25px);
       line-height: 36px;
       color: #babfc5;
     }
@@ -23,18 +24,24 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-  a,
-  span {
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 36px;
-    color: #fff;
-    transition: 0.4s;
+  .breadcrums {
+    a,
+    span {
+      font-weight: 500;
+      font-size: 25px;
+      line-height: 36px;
+      color: #fff;
+      transition: 0.4s;
 
-    &:hover {
-      background: linear-gradient(to right, #d177a5, #7a70e1, #7ea9c2);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      &:hover {
+        background: linear-gradient(to right, #d177a5, #7a70e1, #7ea9c2);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     }
+  }
+
+  .sec__content {
+    gap: 0;
   }
 }
