--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -28,6 +28,9 @@
 // company policy page css
 @import "company-policy";
 
+// Brodcast Detail page css
+@import "podcast-detail";
+
 // Contact Us page css
 @import "contact-us";
 
