--- a/assets/scss/service.scss
+++ b/assets/scss/service.scss
@@ -11,8 +11,8 @@
     display: none;
   }
 
-  .sec__content {
-    padding-top: 200px;
+  .container {
+    padding-top: clamp(64px, 5vw, 150px);
   }
   .sec__content.service__content {
     position: relative;
@@ -89,7 +89,15 @@
     text-align: end;
     overflow: hidden;
     padding-block: 30px;
+    padding-right: 90px;
   }
+
+  .service__tabs .faq__item {
+    border: none;
+    padding-bottom: 0;
+    padding-top: 25px;
+  }
+
   .service__banner__img svg {
     width: 682px;
     height: 678px;
@@ -139,7 +147,7 @@
     color: #d4dbfc;
     position: relative;
     line-height: 30px;
-    padding: 25px 30px 25px 0;
+    padding: 25px 30px 0 0;
     display: flex;
     align-items: start;
   }
