--- a/assets/scss/podcast.scss
+++ b/assets/scss/podcast.scss
@@ -71,6 +71,100 @@
     .sec__heading {
       margin-bottom: clamp(40px, 7vw, 98px);
     }
+}
+
+    .sec__content{
+        .sec__content__inner{
+            display: flex;
+            align-items: center;
+            gap: 50px;
+            .episodes__wrapper{
+                width: 60%;
+            }
+            .form__wrapper{
+                width: 40%;
+            }
+            .episodes__wrapper{
+                .episode__inner{
+                    display: flex;
+                    align-items: center;
+                    gap: clamp(10px,2vw,30px);
+                    padding: 40px 30px;
+                    background-color: #121625;
+                    border-radius:6px;
+
+                   
+                    .episode__image{
+                        width:15%;
+                        position: relative;
+
+                        .play-btn-wrapper{
+                            content: '';
+                            position: absolute;
+                            top: -2px;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            z-index: 1;
+                            background-color: rgba(0, 0, 0, 0.5);
+                            border-radius: 50%;
+                            transition: 0.4s;
+                            opacity: 0;
+                        }
+
+                        .play-btn{
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform:translate(-50%,-35%);
+                            opacity: 0;
+                            transition: 0.4s;
+                        }
+                        img{
+                            border-radius: 50%;
+                            width: 100%;
+                        }
+                    }
+                    .episode__text {
+                        width: 85%;
+                    }
+                    .episode__head{
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
+                        justify-content: space-between;
+                        margin-bottom: 10px;
+
+                        .episode__heading{
+                            font-weight: 800;
+                            font-size: clamp(16px,2vw,25px);
+                            line-height:clamp( 20px,2vw,30px);
+                            color: #FFFFFF;
+                        }
+                        .date{
+                            font-weight: 500;
+                            font-size:clamp( 10px,1vw,16px);
+                            line-height:clamp(12px,1vw, 20px);
+                            text-align: right;
+                            color: #FFFFFF;
+                        }
+                    }
+                    .info{
+                        font-weight: normal;
+                        font-size:16px;
+                        line-height: 20px;
+                        color: #6F6F6F;
+                    }
+                    &:hover{
+                        .play-btn{
+                            opacity: 1;
+                            transform:translate(-50%,-50%);
+                        }
+                        .play-btn-wrapper{
+                           opacity: 1;
+                        }
+                    }
+                }
   }
   .sec__content {
     .sec__content__inner {
@@ -99,8 +193,9 @@
       }
     }
   }
+        }
+    }
 }
-
 .jp-type-playlist {
   display: flex;
   align-items: center;
