--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -317,7 +317,7 @@
   }
 }
 
-.is-visible .connectdot {
+.connectdot {
   animation: dotpulse 1s linear infinite;
 }
 
@@ -330,37 +330,27 @@
   }
 }
 
-.is-visible .connectline {
-  stroke-dasharray: 800;
-  stroke-dashoffset: 800;
-  animation: linemove 2s linear infinite alternate;
+// .is-visible .connectline {
+//   stroke-dasharray: 800;
+//   stroke-dashoffset: 800;
+//   animation: linemove 2s linear infinite alternate;
+// }
+
+@keyframes linemove {
+  // from {
+  //   stroke-dashoffset: 800;
+  // }
+  100% {
+    stroke-dashoffset: 0;
+  }
 }
 
-.is-visible .Vector-17 {
-  width: 50px;
-  height: 5px;
-  offset-distance: 0%;
-  background-color: rgb(54, 54, 189);
-  offset-path: path("M210.501 903C231 554 863.5 608.5 915.999 106.5");
-  animation: dash 10s linear infinite;
-}
-
-.is-visible .Vector-19 {
-  width: 50px;
-  height: 5px;
-  offset-distance: 0%;
-  background-color: rgb(54, 54, 189);
-  offset-path: path("M210 901.5C210 534 791.999 543.5 881.499 110");
-  animation: dash 15s linear infinite;
-}
-
-.is-visible .Vector-20 {
-  width: 50px;
-  height: 5px;
-  offset-distance: 0%;
-  background-color: rgb(54, 54, 189);
-  offset-path: path("M209.999 903C196.499 522.5 772.999 481.5 861 26.4999");
-  animation: dash 20s linear infinite;
+@for $i from 1 through 9 {
+    #Line  path:nth-child(#{$i}) {
+      stroke-dasharray: 300;
+      stroke-dashoffset: 300;
+      animation: linemove 2s infinite forwards;
+    }
 }
 
 // @keyframes vectordash {
