--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -41,3 +41,99 @@
   right: 30px;
   transform: translateY(-50%);
 }
+.nav__list{
+  ul{
+    li{
+      position: relative;
+    }
+  }
+}
+.dropdown{
+  background-color: #2A2E37;
+  padding: 35px 30px;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  width: 260px;
+  border-radius: 10px;
+  opacity: 0;
+  transition: 0.4s;
+  transform: translateY(20px);
+
+  .dropdown__item{
+    position: relative;
+    
+    &:not(:last-child){
+      margin-bottom: 10px;
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(89.66deg, rgba(209, 119, 165, 0.4) 0.38%, rgba(122, 112, 225, 0.4) 48.89%, rgba(126, 169, 194, 0.3) 99.8%);
+      border-radius: 5px;
+      transition: 0.4s;
+      display: block;
+      transform: scale(0,1 );
+      transform-origin: top right;
+      transition: transform 0.5s;
+      opacity: 0.7;
+
+    }
+
+    &:hover::after{
+      // width: 100%;
+      transform: scale(1,1);
+      transform-origin: top left;
+    }
+    a{
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 20px;
+      color: #FFFFFF;
+      padding: 10px;
+      transition: 0.6s;
+      border-radius: 5px;
+      position: relative;
+      z-index: 9;
+    }
+  }
+}
+
+.nav-modifier{
+  position: relative;
+  display: block;
+  position: relative;
+  &::after,
+  &::before
+  {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 110%;
+    transform: translatey(-50%);
+    background-color: #fff;
+    width: 14px;
+    height: 2px;
+    border-radius: 10px;
+    transition: all 0.4s;
+  }
+  &::before{
+    transform: rotate(90deg);
+  }
+}
+.nav__item.nav-modifier.show + div{
+  opacity: 1;
+  transform: translatey(0);
+}
+.nav__item.nav-modifier.show{
+  &::before {
+    transform: rotate(0deg);
+  }
+}
