changes for global map animate

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -79,7 +79,7 @@
 
 /* Deploy Sec Start */
 .tmb__deploy__sec {
-  padding: 141px 0 215px;
+  padding: 140px 0 215px;
 }
 .deploy__sec__content {
   display: grid;
@@ -520,7 +520,7 @@
 
 
 @import 'indexanimation';
-
+@import 'globalmapanimation';
 
 
 .hero__heading {
